mudei só algumas palavras

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section id="projetos">
             <article>
                 <h1>Projetos</h1>
-                <p>deslize para baixo para ver o projeto completo</p>
+                <p>deslize ou clique para ver o projeto completo</p>
             </article>
             <abbr title="clique para acessar o site">
                 <div class="img_projetos">
