adicionando responsividade ao site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     desenvolvedor front-end exemplar. Com habilidades sólidas em HTML, CSS, JavaScript (entre outras) e
                     uma inclinação para automação com Python, estou comprometido em aprimorar constantemente minhas
                     habilidades para criar interfaces intuitivas e atraentes. Sou um colaborador flexível e dedicado,
-                    sempre disposto a contribuir para o sucesso da equipe, levando o trabalho a sério e buscando constantemente a
+                    sempre disposto a contribuir para o sucesso da equipe, levando o trabalho a sério e buscando
+                    constantemente a
                     excelência em tudo o que faço.</p>
             </article>
         </section>
